# y2d_cv8_clone

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  MIGRATION_NOTES.md  Makefile  PACKAGE_PLAN.md  README.md  cloud_cost_analysis.md  docker-compose.yml  plan_roadmap.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: docs.yaml  lint.yaml  test.yaml
docs/: conf.py  index.rst  installation.rst  todo.rst  usage.rst
docs/diagrams/: Local.drawio  cloud(1).drawio  on_site.drawio
src/thalianacv/: __init__.py
src/thalianacv/api/: main.py  routes.py  schemas.py
src/thalianacv/cli/: __init__.py  main.py
src/thalianacv/core/: __init__.py  predict.py
src/thalianacv/data/: default_stats.json  preprocessing.py
src/thalianacv/database/: __init__.py  models.py
src/thalianacv/utils/: __init__.py  logging.py  types.py
tests/: test_api.py  test_api_schemas.py  test_core_predict.py  test_data_preprocessing_patch.py  test_data_preprocessing_roi.py  test_database.py  test_smoke.py  test_utils_types.py
tests/smoke/: test_preprocess.py
