[project]
name = "thalianacv"
version = "0.2.1"
description = "Computer vision package for plant image analysis targeting the HADES phenotyping system at NPEC"
authors = [
    {name = "Group CV8", email = "245484@buas.nl"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["computer vision", "plant phenotyping", "segmentation", "deep learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "pandas (>=1.5.0,<3.0.0)",
    "numpy (>=1.24.0,<2.0.0)",
    "typer (>=0.9.0,<1.0.0)",
    "fastapi (>=0.136.0,<0.137.0)",
    "uvicorn[standard] (>=0.45.0,<0.46.0)",
    "python-multipart (>=0.0.26,<0.0.27)",
    "opencv-python (>=4.8.0,<4.10.0)"
]

[project.scripts]
thalianacv = "thalianacv.cli:app"

[project.urls]
Homepage = "https://github.com/BredaUniversityADSAI/2025-26d-fai2-adsai-group-computervision8"
Repository = "https://github.com/BredaUniversityADSAI/2025-26d-fai2-adsai-group-computervision8"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "thalianacv", from = "src"}]

[tool.black]
target-version = ["py310"]
line-length = 88
extend-exclude = "tests/smoke"

[tool.isort]
profile = "black"
known_first_party = ["thalianacv"]
extend_skip_glob = ["tests/smoke/*"]

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)",
    "sphinx (>=7.0,<8.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "tomli (>=2.4.1,<3.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "furo (>=2025.12.19,<2026.0.0)"
]
