[project]
name = "thalianacv"
version = "0.3.0"
description = "Computer vision package for plant image analysis targeting the HADES phenotyping system at NPEC"
authors = [
    {name = "Group CV8", email = "245484@buas.nl"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = "==3.10.*"
keywords = ["computer vision", "plant phenotyping", "segmentation", "deep learning"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
dependencies = [
    "pandas>=1.5.0,<3.0.0",
    "numpy>=1.24.0,<2.0.0",
    "typer>=0.9.0,<1.0.0",
    "fastapi==0.100.0",
    "uvicorn[standard]>=0.45.0,<0.46.0",
    "python-multipart>=0.0.26,<0.0.27",
    "tensorflow==2.15.0; sys_platform == 'linux'",
    "tensorflow-macos==2.13.0; sys_platform == 'darwin'",
    "tensorflow-metal==1.1.0; sys_platform == 'darwin'",
]

[project.scripts]
thalianacv = "thalianacv.cli:app"

[project.urls]
Homepage = "https://github.com/BredaUniversityADSAI/2025-26d-fai2-adsai-group-computervision8"
Repository = "https://github.com/BredaUniversityADSAI/2025-26d-fai2-adsai-group-computervision8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/thalianacv"]

[tool.black]
target-version = ["py310"]
line-length = 88

[tool.isort]
profile = "black"
known_first_party = ["thalianacv"]

[dependency-groups]
dev = [
    "pytest>=9.0.3,<10.0.0",
    "black>=26.3.1,<27.0.0",
    "pre-commit>=4.5.1,<5.0.0",
    "sphinx>=7.0,<8.0",
    "flake8>=7.3.0,<8.0.0",
    "tomli>=2.4.1,<3.0.0",
    "pytest-cov>=7.1.0,<8.0.0",
    "pillow>=12.2.0,<13.0.0",
    "furo>=2025.12.19,<2026.0.0",
    "httpx>=0.27.0,<0.28.0",

]

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
]